# IdempotentPlanningProtocol

./: README.md
catkin_ws/src/: cleanup.sh  (+7 more)
catkin_ws/src/epuckChooseDirectionByGSM.machine/: CMakeLists.txt  Layout.plist  State_Check_If_Ready.h  State_Check_If_Ready.mm  State_Check_If_Ready_OnEntry.mm  State_Check_If_Ready_Transition_0.expr  State_Check_If_Ready_Transition_2.expr  State_Check_If_Ready_VarRefs.mm  State_Check_If_Ready_Variables.h  State_ChooseDirection.h  State_ChooseDirection.mm  State_ChooseDirection_OnEntry.mm  State_Initial.h  State_Initial.mm  State_InitialPseudoState.h  State_InitialPseudoState.mm  State_Initial_OnEntry.mm  State_Not_Ready.h  State_Not_Ready.mm  State_Not_Ready_VarRefs.mm  State_Not_Ready_Variables.h  State_SUSPENDED.h  State_SUSPENDED.mm  State_Stop.h  State_Stop.mm  State_Stop_OnEntry.mm  States  WindowLayout.plist  epuckChooseDirectionByGSM.cbp  epuckChooseDirectionByGSM.h  epuckChooseDirectionByGSM.layout  epuckChooseDirectionByGSM.mm  epuckChooseDirectionByGSM_VarRefs.mm  epuckChooseDirectionByGSM_Variables.h  package.xml
catkin_ws/src/epuckCoordinatesByGSM.machine/: CMakeLists.txt  Layout.plist  State_Are_We_Travelling.h  State_Are_We_Travelling.mm  State_Are_We_Travelling_Internal.mm  State_Are_We_Travelling_OnEntry.mm  State_Are_We_Travelling_VarRefs.mm  State_Are_We_Travelling_Variables.h  State_Detected_Intersection.h  State_Detected_Intersection.mm  State_Entering_Intersection.h  State_Entering_Intersection.mm  State_Entering_Intersection_OnEntry.mm  State_Entering_Intersection_Transition_0.expr  State_Entering_Intersection_Transition_1.expr  State_Initial.h  State_Initial.mm  State_InitialPseudoState.h  State_InitialPseudoState.mm  State_Initial_OnEntry.mm  State_Moved_Down.h  State_Moved_Down.mm  State_Moved_Down_OnEntry.mm  State_Moved_Down_VarRefs.mm  State_Moved_Down_Variables.h  State_Moved_Left.h  State_Moved_Left.mm  State_Moved_Left_OnEntry.mm  State_Moved_Left_VarRefs.mm  State_Moved_Left_Variables.h  State_Moved_Right.h  State_Moved_Right.mm  State_Moved_Right_OnEntry.mm  State_Moved_Right_VarRefs.mm  State_Moved_Right_Variables.h  State_Moved_Up.h  State_Moved_Up.mm  State_Moved_Up_OnEntry.mm  State_Moved_Up_VarRefs.mm  State_Moved_Up_Variables.h  (+29 more)
catkin_ws/src/epuckFollowLineByGSM.machine/: CMakeLists.txt  Layout.plist  State_Continue_Forward.h  State_Continue_Forward.mm  State_Forward.h  State_Forward.mm  State_Forward_Feedback.h  State_Forward_Feedback.mm  State_Forward_Feedback_OnEntry.mm  State_Forward_OnEntry.mm  State_Forward_Transition_0.expr  State_Forward_Transition_1.expr  State_Initial.h  State_Initial.mm  State_InitialPseudoState.h  State_InitialPseudoState.mm  State_InitialPseudoState_OnEntry.mm  State_Initial_OnEntry.mm  State_SUSPENDED.h  State_SUSPENDED.mm  State_VeeringLeft.h  State_VeeringLeft.mm  State_VeeringLeft_OnEntry.mm  State_VeeringLeft_Transition_0.expr  State_VeeringLeft_VarRefs.mm  State_VeeringLeft_Variables.h  State_VeeringRight.h  State_VeeringRight.mm  State_VeeringRight_OnEntry.mm  State_VeeringRight_Transition_0.expr  State_VeeringRight_VarRefs.mm  State_VeeringRight_Variables.h  States  WindowLayout.plist  epuckFollowLineByGSM.cbp  epuckFollowLineByGSM.h  epuckFollowLineByGSM.layout  epuckFollowLineByGSM.mm  epuckFollowLineByGSM_Includes.h  epuckFollowLineByGSM_VarRefs.mm  (+2 more)
catkin_ws/src/epuckIntersectionByGSM.machine/: CMakeLists.txt  Layout.plist  State_Align_Beyond_Intersection.h  State_Align_Beyond_Intersection.mm  State_Align_Beyond_Intersection_OnEntry.mm  State_Align_In_Intersection.h  State_Align_In_Intersection.mm  State_Align_In_Intersection_OnEntry.mm  State_CentreGS_Detects_Intersection.h  State_CentreGS_Detects_Intersection.mm  State_CentreGS_Detects_Intersection_OnEntry.mm  State_CentreGS_Detects_Nothing.h  State_CentreGS_Detects_Nothing.mm  State_CentreGS_Detects_Nothing_OnEntry.mm  State_CentreGS_Detects_Path.h  State_CentreGS_Detects_Path.mm  State_CentreGS_Detects_Path_OnEntry.mm  State_Detected_Intersection.h  State_Detected_Intersection.mm  State_Detected_Intersection_OnEntry.mm  State_Determine_Direction_Left.h  State_Determine_Direction_Left.mm  State_Determine_Direction_Left_OnEntry.mm  State_Determine_Direction_Left_Transition_0.expr  State_Determine_Direction_Right.h  State_Determine_Direction_Right.mm  State_Determine_Direction_Right_OnEntry.mm  State_Determine_Direction_Right_Transition_0.expr  State_Determine_Direction_Straight.h  State_Determine_Direction_Straight.mm  State_Determine_Direction_Straight_OnEntry.mm  State_Determine_Direction_Straight_Transition_0.expr  State_Determine_Direction_Straight_Transition_1.expr  State_Entering_Intersection.h  State_Entering_Intersection.mm  State_Entering_Intersection_OnEntry.mm  State_In_Intersection_Aligned.h  State_In_Intersection_Aligned.mm  State_In_Intersection_Aligned_OnEntry.mm  State_In_Intersection_Aligned_OnExit.mm  (+78 more)
catkin_ws/src/epuckNavigateGridByGSM.machine/: CMakeLists.txt  Layout.plist  State_Align_After_Left_Turn.h  State_Align_After_Left_Turn.mm  State_Align_After_Right_Turn.h  State_Align_After_Right_Turn.mm  State_Align_Beyond_Intersection.h  State_Align_Beyond_Intersection.mm  State_Align_In_Intersection.h  State_Align_In_Intersection.mm  State_Align_To_Left_Beyond_Intersection.h  State_Align_To_Left_Beyond_Intersection.mm  State_At_Goal.h  State_At_Goal.mm  State_At_Goal_Internal.mm  State_At_Goal_OnEntry.mm  State_At_Goal_Transition_0.expr  State_CentreGS_Detects_Intersection.h  State_CentreGS_Detects_Intersection.mm  State_CentreGS_Detects_Nothing.h  State_CentreGS_Detects_Nothing.mm  State_CentreGS_Detects_Path.h  State_CentreGS_Detects_Path.mm  State_ChooseDirection.h  State_ChooseDirection.mm  State_ChooseDirection_OnEntry.mm  State_ChooseDirection_OnExit.mm  State_ChooseDirection_Transition_0.expr  State_ChooseDirection_Transition_1.expr  State_ChooseDirection_Transition_2.expr  State_Continue_Align_Left.h  State_Continue_Align_Left.mm  State_Continue_Align_Right.h  State_Continue_Align_Right.mm  State_Continue_Forward.h  State_Continue_Forward.mm  State_Determine_Direction_Left.h  (+85 more)
(+710 files in other folders)
